Updated twitter integration to built-in iOS5 Twitter integration. See README.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ build/*
 *.pbxuser
 Lib/json-framework/*
 Res/login.plist
+*.xcuserstate
+*.xcsettings
+*.xcuserdata
+*.xcuserdatad
+*.xcworkspacedata
